--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.13",
-    "@types/node": "10.12.19",
-    "@types/react": "16.7.22",
-    "@types/react-dom": "16.0.11",
+    "@types/jest": "^23.3.13",
+    "@types/node": "^10.12.19",
+    "@types/react": "^16.7.22",
+    "@types/react-dom": "^16.0.11",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
+    "mobx-react-devtools": "^6.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
-    "typescript": "3.2.4"
+    "typescript": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,5 +29,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.17.0"
+  }
 }
